# cogitate-core

./: README.md  pyproject.toml
platscan/core/: accumulator.py  models.py  plugin_loader.py  system.py
platscan/plugins/aws/: plugin.py  secrets.py  secrets_manager_search.py  sso.py
platscan/ui/: cli.py
tests/unit/core/: conftest.py  test_accumulator.py  test_plugin_loader.py  test_system.py
tests/unit/plugins/aws/: conftest.py  test_plugin.py  test_secrets.py
tests/unit/ui/: test_cli.py
