[tool.poetry]
name = "platscan"
version = "0.1.0"
description = "Platform Scanning Tool"
authors = ["Obsidian33"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
types-jmespath = "^1.0.2.20240106"
boto3-stubs = "^1.35.85"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
moto = "^5.0.24"

[tool.poetry.group.aws]
optional = true

[tool.poetry.group.aws.dependencies]
boto3 = "^1.35.83"

[tool.poetry.group.cli]
optional = true

[tool.poetry.group.cli.dependencies]
click = "^8.1.7"

[tool.poetry.scripts]
platscan = "platscan.ui.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
